// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Content /> should render the logo 1`] = `
<Fragment>
  <Logo />
  <Connect(Search)
    active={false}
  />
</Fragment>
`;

exports[`<Content /> should render the title 1`] = `
<Fragment>
  <Connect(Title)
    onClick={[Function]}
  />
  <Connect(Search)
    active={false}
  />
</Fragment>
`;
